test_programs/compile_failure/noirc_frontend_tests_unconditional_recursion_pass_4/src/main.nr

        fn main() {
            let foo = || main();
            foo();
        }
        